ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  # important!
spec:
  ingressClassName: nginx
  rules:
  - host: cicd.convergentechnologies.com
    http:
      paths:
      - path: /java
        pathType: Prefix
        backend:
          service:
            name: java-app
            port:
              number: 8080
